<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tvShowImageURL"
            type="String" />

        <variable
            name="tvShowName"
            type="String" />

        <variable
            name="networkCountry"
            type="String" />

        <variable
            name="status"
            type="String" />

        <variable
            name="startDate"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="rating"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="runtime"
            type="String" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_app_color"
        tools:context=".activities.TVShowDetailsActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageWatchlist"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/background_back_button"
                    android:contentDescription="@string/app_name"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/baseline_bookmark_border_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageTVShow"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_180sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:imageURL="@{tvShowImageURL}"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageBack"
                    app:riv_corner_radius="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:text="@{tvShowName}"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageTVShow"
                    tools:text="@string/app_name"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textNetworkCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@={networkCountry}"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textName"
                    tools:text="H|BO" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textStarted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Started on : " + startDate}'
                    android:textAlignment="gravity"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textNetworkCountry"
                    tools:text="started" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{status}"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textStarted"
                    tools:text="end" />

                <View
                    android:id="@+id/viewDivider3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textStatus" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:maxLines="4"
                    android:minLines="4"
                    android:text="@{description}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider3"
                    tools:ignore="TextSizeCheck"
                    tools:layout_editor_absoluteX="10dp"
                    tools:text="desc" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:includeFontPadding="false"
                    android:text="@string/readMore"
                    android:textColor="@color/white"
                    android:background="@color/secondColor"
                    android:padding="5dp"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDescription" />

                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    app:layout_constraintTop_toBottomOf="@id/textReadMore" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baseline_star_24"
                    app:layout_constraintBottom_toBottomOf="@id/textRating"
                    app:layout_constraintEnd_toStartOf="@id/textRating"
                    app:layout_constraintTop_toTopOf="@id/textRating"
                    app:tint="@android:color/holo_orange_light" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text='@{rating + "  -  " + genre + "  -  " + runtime}'
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider1"
                    tools:text="9.80" />

                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textRating" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonWebsite"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:includeFontPadding="false"
                    android:text="@string/website"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/imagesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/images"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonWebsite" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imagesTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/episodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/episode"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewEpisode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/episodeTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>